--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
 
   mysql:
    image: mysql:5.6
-   container_name: yii-db
+   container_name: test-db
    ports:
        - "3306:3306"
    volumes:
@@ -51,25 +51,6 @@ services:
        MYSQL_PASSWORD: ${MYSQL_PASSWORD}
    networks:
        - lbpapp
-
-
-#  mysql:
-#    image: mysql:8
-#    container_name: lesson9-db
-#    ports:
-#      - "3306:3306"
-#    command: --default-authentication-plugin=mysql_native_password
-#    volumes:
-#      - ./mysql:/var/lib/mysql
-#    restart: always
-#    environment:
-#      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-#      MYSQL_DATABASE: ${MYSQL_DATABASE}
-#      MYSQL_HOST: ${MYSQL_HOST}
-#      MYSQL_USER: ${MYSQL_USER}
-#      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-#    networks:
-#      - lbpapp
 
 networks:
   lbpapp:
