--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3'
 services:
-  web:
+  nginx:
     image: nginx:${NGINX_VERSION}
+    container_name: web-nginx
     volumes:
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./:/var/www/html
@@ -27,30 +28,25 @@ services:
     image: adminer
     ports:
       - ${WEB_ADMINER_PORT}:8080
-    environment:
-      ADMINER_DEFAULT_SERVER: mysql
-      ADMINER_DEFAULT_DB_HOST: mysql
     depends_on:
-      - mysql
+      - postgres
     networks:
       - lbpapp
 
-  mysql:
-   image: mysql:5.6
-   container_name: test-db
-   ports:
-       - "3306:3306"
-   volumes:
-       - ./mysql:/var/lib/mysql
-   restart: always
-   environment:
-       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-       MYSQL_DATABASE: ${MYSQL_DATABASE}
-       MYSQL_HOST: ${MYSQL_HOST}
-       MYSQL_USER: ${MYSQL_USER}
-       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-   networks:
-       - lbpapp
+  postgres:
+    image: postgres
+    container_name: postgres-db
+    ports:
+      - "5432:5432"
+    restart: always
+    environment:
+      POSTGRES_ROOT_PASSWORD: ${POSTGRES_ROOT_PASSWORD}
+      POSTGRES_DATABASE: ${POSTGRES_DATABASE}
+      POSTGRES_HOST: ${POSTGRES_HOST}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    networks:
+      - lbpapp
 
 networks:
   lbpapp:
